[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/interfaces/char_health_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/chars/character.gd" type="Script" id=2]
[ext_resource path="res://src/interfaces/char_health_bar.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.57475, 3.43436 )

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 25.0

[node name="Body" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Health_Bar" parent="." instance=ExtResource( 1 )]
margin_left = -19.0
margin_top = -32.0
margin_right = -19.0
margin_bottom = -32.0
script = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 10, 10 )
collision_mask = 4

[node name="Attack_Range" type="Area2D" parent="."]
position = Vector2( 0, -11 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_Range"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Attack_Range" to="." method="_on_Attack_Range_body_entered"]
[connection signal="body_exited" from="Attack_Range" to="." method="_on_Attack_Range_body_exited"]
